# scPDSI2003

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  News.md  readme.md  run.ps1
.tracecompass/: .project
Include/: basic.h  format.h  llist.h  scPDSI.h
example/: mon_T_normal  wk_T_normal
src/: basic.cpp  check_dir.cpp  llist.cpp  main.cpp  scPDSI.cpp
